feat : ThemeService 테마 글 작성 로직 수정 - #21